--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                                 <i class="lni lni-envelope"></i>
                             </div>
                             <div class="contact-info-content media-body">
-                                <p class="text">Tushar@gmail.com</p>
+                                <p class="text">Tusharsalve76@gmail.com</p>
                                 <p class="text">support@Tushar.com</p>
                             </div>
                         </div> <!-- single contact info -->
@@ -711,8 +711,8 @@
                                 <i class="lni lni-phone"></i>
                             </div>
                             <div class="contact-info-content media-body">
-                                <p class="text">+91-708-322-76-06</p>
-                                <p class="text">+91-848-507-61-33</p>
+                                <p class="text">+91-7083227606</p>
+                                <p class="text">+91-8485076133</p>
                             </div>
                         </div> <!-- single contact info -->
                     </div>
@@ -784,11 +784,11 @@
                         <li><a href="#"><i class="lni lni-linkedin-original"></i></a></li>
                     </ul> <!-- social -->
                     <div class="footer-support text-center">
-                        <span class="number">+91-983-409-58-20</span>
-                        <span class="mail">jarvistm97@gmail.com</span>
+                        <span class="number">+91-8796752473</span>
+                        <span class="mail">help@gmail.com</span>
                     </div>
                     <div class="copyright text-center mt-35">
-                        <p class="text">Designed by <a href="https://google.com" rel="nofollow">Yash</a>
+                        <p class="text">Designed by <a href="https://google.com" rel="nofollow">Tushar and team</a>
                     </div> <!--  copyright -->
                 </div>
             </div> <!-- row -->
